# Project-EP-OS

./: .env.example  .gitignore  AGENTS.md  Dockerfile  EvoPyramid OS Архитектура и Разработка.txt  EvoPyramid_Extension.crx  EvoPyramid_OS_ArchMap_v03.html  LICENSE  Nexus_Boot.py  README.md  SK_REFACT.txt  Start_OS.cmd  cascade_out.txt  cascade_utf8.txt  cleanup_state.py  cloudbuild.yaml  conftest.py  discovery_fix.py  fill_empties.py  firebase.json  netlify.toml  out2.txt  out_all.txt  out_utf16.txt  pyproject.toml  pytest_all_err.txt  pytest_err.txt  pytest_err2.txt  pytest_output.txt  pytest_output8.txt  quantum_concept.txt  requirements.txt  stress_results.txt  tmp_append_atomic.py  tmp_append_cortex.py  tmp_scan_dupes.py  unzip_evo.py  validate_ignition.py  z_architecture_order.md
.github/: PULL_REQUEST_TEMPLATE.md  SECRETS_CHECKLIST.md
EvoPyramid_Extension/: background.js  content.js  manifest.json
alpha_pyramid_core/: apex_core.py  atlas_generator.py  spine_router.py  transit_z14.py
architecture/: architecture_map.json  solution_catalog.json
beta_pyramid_functional/: README.md
beta_pyramid_functional_backup/: README.md
docs/: AI_COGNITIVE_BOOTSTRAP.md  COLLABORATION.md  CONSTITUTION.md  EvoPYRAMID_AI_SELF_DIAGNOSTIC_QUESTIONNAIRE_v1.1.md  PROJECT_AUDIT.md  REFERENCE_MODEL.md  TRIAD_INTERACTION_PROTOCOL.md  TRINITY_CONNECT.md  WHY.md  ep_os_canonical_execution_model.md  fixed_agent_module_spec.md  reference_operating_model.md  trinity_protocol.md  v23_audit_report.html  z_architecture_order.md  z_cascade_protocol.md
evo_data/: hypergraph.json  (+3 more)
(+482 files in other folders)
