[project]
name = "evopyramid-os"
version = "4.0.0"
description = "EvoPyramid OS - Trinity Protocol"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.0",
    "google-generativeai>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
